# FreeImage-Sidecar

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindLCMS2.cmake
src/: FISidecar.cpp  FISidecar.h  PluginHEIF.cpp  PluginHEIF.hpp  unique_resource.h
